--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - go generate -x ./...
 
 script:
-- travis_wait 30 go test -coverpkg ./.. ./... -v -covermode=count -coverprofile=coverage.out -timeout 100m
+- travis_wait 30 go test -coverpkg . ./... -v -covermode=count -coverprofile=coverage.out -timeout 100m
 
 after_success:
 - gometalinter -e bindata --deadline=1000s ./...
