--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
 - travis_wait 30 go test -coverpkg . ./... -v -covermode=count -coverprofile=coverage.out -timeout 100m
 
 after_success:
-- gometalinter -e bindata --deadline=1000s ./...
+- gometalinter -e bindata --deadline=1000s ./... | sort
 - goveralls -coverprofile=coverage.out -service=travis-ci
